==============
lxml changelog
==============

under development
=================

Features added
--------------

* ElementInclude module for ElementTree compatible XInclude processing that
  honours custom resolvers registered with the source document

* ElementTree.parser property holds the parser used to parse the document

* setup.py has been refactored for greater readability and flexibility

* --rpath flag to setup.py to induce automatic linking-in of dynamic library
  runtime search paths has been renamed to --auto-rpath. This makes it
  possible to pass an --rpath directly to distutils; previously this was being
  shadowed.

Bugs fixed
----------

* ElementTree.write() did not raise an exception when the file was not writable

* Error handling could crash under Python <= 2.4.1 - fixed by disabling thread
  support in these environments

* Element.find*() did not accept QName objects as path


1.1.2 (2006-10-30)
==================

Features added
--------------

* Data elements in objectify support repr(), which is now used by dump()

* Source distribution now ships with a patched Pyrex

* New C-API function makeElement() to create new elements with text,
  tail, attributes and namespaces

* Reuse original parser flags for XInclude

* Simplified support for handling XSLT processing instructions

Bugs fixed
----------

* Parser resources were not freed before the next parser run

* Open files and XML strings returned by Python resolvers were not
  closed/freed

* Crash in the IDDict returned by XMLDTDID

* Copying Comments and ProcessingInstructions failed

* Memory leak for external URLs in _XSLTProcessingInstruction.parseXSL()

* Memory leak when garbage collecting tailed root elements

* HTML script/style content was not propagated to .text

* Show text xincluded between text nodes correctly in .text and .tail

* 'integer * objectify.StringElement' operation was not supported


1.1.1 (2006-09-21)
==================

Features added
--------------
